; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_init.c_mwifiex_wake_up_net_dev_queue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_init.c_mwifiex_wake_up_net_dev_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.mwifiex_adapter = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mwifiex_wake_up_net_dev_queue(%struct.net_device* %0, %struct.mwifiex_adapter* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.mwifiex_adapter*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.mwifiex_adapter* %1, %struct.mwifiex_adapter** %4, align 8
  %5 = load %struct.mwifiex_adapter*, %struct.mwifiex_adapter** %4, align 8
  %6 = getelementptr inbounds %struct.mwifiex_adapter, %struct.mwifiex_adapter* %5, i32 0, i32 0
  %7 = call i32 @spin_lock_bh(i32* %6)
  %8 = load %struct.net_device*, %struct.net_device** %3, align 8
  %9 = call i32 @netif_tx_wake_all_queues(%struct.net_device* %8)
  %10 = load %struct.mwifiex_adapter*, %struct.mwifiex_adapter** %4, align 8
  %11 = getelementptr inbounds %struct.mwifiex_adapter, %struct.mwifiex_adapter* %10, i32 0, i32 0
  %12 = call i32 @spin_unlock_bh(i32* %11)
  ret void
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @netif_tx_wake_all_queues(%struct.net_device*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
